CPG-DEV/src/objects/Competitor_Product__c.object
<CustomObject>
    <fields>
        <fullName>Activate_Price_Capture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Price Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Behavior_Other_Description__c</fullName>
        <label>Competitive Behavior Other Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Behavior__c</fullName>
        <description>Captures the behavior of the competitor for this specific product</description>
        <label>Competitive Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Products</relationshipLabel>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Positioning__c</fullName>
        <label>Positioning</label>
        <picklist>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMO-free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Calorie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Price_Point_Source__c</fullName>
        <label>Price Point Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail/consumer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Point__c</fullName>
        <label>Price Point</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Product Line A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Line D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_sector_segment_application__c</fullName>
        <description>What particular sub sector/segment/application are they focusing on?</description>
        <inlineHelpText>What particular sub sector/segment/application are they focusing on?</inlineHelpText>
        <label>Sub sector/segment/application</label>
        <picklist>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snacks &amp; cereals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant and Baby Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pet Food</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Capacity__c</fullName>
        <label>Total Capacity</label>
        <summarizedField>Plant_Location_Product__c.Capacity__c</summarizedField>
        <summaryForeignKey>Plant_Location_Product__c.Competitor_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Competitor Product</label>
    <nameField>
        <label>Competitor Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>